--- a/src/components/SavedNewsCardList/SavedNewsCardList.css
+++ b/src/components/SavedNewsCardList/SavedNewsCardList.css
@@ -7,8 +7,8 @@
 
 .saved-news-card-list__card-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 16px 0;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 16px;
 }
 
 @media screen and (max-width: 768px) {
@@ -17,8 +17,8 @@
   }
 
   .saved-news-card-list__card-list {
-    grid-template-columns: repeat(auto-fit, minmax(224px, 1fr));
-    gap: 8px 0;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 8px;
   }
 }
 
